Добавляет иконки в header
Чтобы сделать ховер ссылки и иконки пришлось убрать fill иконки в спрайте и по отдельности записать свойства, потому что ко всему элементу contacts-list-item ховер не применится, ведь list-item - это НЕ ИНТЕРАКТИВНЫЙ ЭЛЕМЕНТ! Также чтобы поставить по центру иконку и ссылку пришлось задать свойство flex

--- a/css/styles.css
+++ b/css/styles.css
@@ -124,20 +124,31 @@ ul {
   margin-left: 50px;
 }
 
+.contacts-icon {
+  margin-right: 10px;
+  fill: #757575;
+}
+
 .contacts-link {
-  display: block; /* Чтобы ссылка заняла всю ширину и не было справа зазора 4рх */
+  display: flex;
   padding-top: 32px;
   padding-bottom: 32px;
   font-weight: 500;
   letter-spacing: 0.02em;
   color: var(--secondary-text-color);
   text-decoration: none;
+  align-items: center;
 }
 
 .contacts-link:hover,
 .contacts-link:focus {
   color: var(--accent-color);
 }
+
+.contacts-link:hover .contacts-icon {
+  fill: var(--accent-color);
+}
+
 /* Cтилизация блока-героя */
 .hero {
   padding-top: 200px;
