--- a/css/styles.css
+++ b/css/styles.css
@@ -151,10 +151,18 @@ ul {
 
 /* Cтилизация блока-героя */
 .hero {
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
   padding-top: 200px;
   padding-bottom: 200px;
   text-align: center;
   background-color: var(--secondary-background-color);
+  background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url('../images/img17.jpg');
+  background-size: cover;
+  background-position: center;
 }
 
 .hero-title {
