--- a/css/styles.css
+++ b/css/styles.css
@@ -211,6 +211,20 @@ ul {
   margin-right: 30px;
 }
 
+.features-list-item {
+  display: flex;
+  flex-direction: column;
+}
+
+.thumb {
+  width: 270px;
+  height: 120px;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  padding: 25px 100px;
+  margin-bottom: 30px;
+}
+
 .features-title {
   margin-bottom: 10px;
   text-transform: uppercase;
