--- a/css/styles.css
+++ b/css/styles.css
@@ -279,6 +279,7 @@ ul {
 .card-container {
   text-align: center;
   padding: 30px;
+  padding-bottom: 16px;
   background-color: var(--primary-background-color);
 }
 
@@ -291,6 +292,35 @@ ul {
 .team-list-description {
   font-size: 16px;
   color: var(--secondary-text-color);
+}
+
+.team-thumb {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: auto;
+  height: 74px;
+  background-color: var(--primary-background-color);
+  padding: 0px 32px 30px;
+}
+
+.social-link {
+  border-radius: 50%;
+  width: 44px;
+  height: 44px;
+  padding: 12px;
+}
+
+.social-link {
+  fill: #afb1b8;
+}
+
+.social-link:hover {
+  background-color: var(--accent-color);
+}
+.social-link:hover {
+  fill: white;
 }
 /* Стилизация Footer */
 .section-footer {
