--- a/css/styles.css
+++ b/css/styles.css
@@ -306,13 +306,11 @@ ul {
 }
 
 .social-link {
+  display: block;
   border-radius: 50%;
   width: 44px;
   height: 44px;
   padding: 12px;
-}
-
-.social-link {
   fill: #afb1b8;
 }
 
@@ -322,6 +320,44 @@ ul {
 .social-link:hover {
   fill: white;
 }
+/* Стилизация секции "Постоянные клиенты" */
+
+.clients-title {
+  margin-bottom: 50px;
+  text-align: center;
+  font-size: 36px;
+}
+
+.clients-list {
+  display: flex;
+}
+
+.clients-list-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.clients-link {
+  display: block;
+  width: 170px;
+  height: 92px;
+  padding: 16px 32px 16px 32px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+}
+
+.clients-icon {
+  fill: #afb1b8;
+}
+
+.clients-link:hover,
+.clients-link:focus {
+  border: 1px solid var(--accent-color);
+}
+
+.clients-link:hover .clients-icon {
+  fill: var(--accent-color);
+}
+
 /* Стилизация Footer */
 .section-footer {
   padding-top: 60px;
