--- a/css/styles.css
+++ b/css/styles.css
@@ -388,6 +388,7 @@ ul {
   line-height: 1.7;
   color: white;
 }
+
 .company-link {
   display: block; /* Убирает зазор между ссылками */
   font-style: normal;
@@ -395,6 +396,7 @@ ul {
   letter-spacing: 0.02em;
   color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
+  margin-top: 8px;
 }
 
 .company-link:hover,
