--- a/css/styles.css
+++ b/css/styles.css
@@ -443,7 +443,7 @@ ul {
 }
 
 /* Стилизация секции "Портфолио работ" */
-.section-header {
+.header {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
