--- a/css/styles.css
+++ b/css/styles.css
@@ -354,11 +354,7 @@ ul {
 
 .container-footer {
   display: flex;
-  align-items: center;
-}
-
-.container-footer-adress {
-  width: 231px;
+  align-items: baseline;
 }
 
 .footer-company-name {
@@ -394,8 +390,6 @@ ul {
 .footer-social-thumb {
   display: flex;
   flex-direction: column;
-  width: 206px;
-  height: 80px;
   margin-left: 70px;
 }
 
@@ -414,11 +408,11 @@ ul {
 }
 
 .social-list-item > .social-link {
-  display: block;
+  display: flex;
+  justify-content: center;
   border-radius: 50%;
-  width: 44px;
-  height: 44px;
   padding: 12px;
+  background-color: rgba(255, 255, 255, 0.1);
   fill: var(--hero-text-color);
 }
 
