--- a/css/styles.css
+++ b/css/styles.css
@@ -468,10 +468,11 @@ ul {
 }
 
 .button {
+  padding: 6px 12px;
   border: transparent;
   border-radius: 4px;
   font-family: inherit;
-  font-weight: bold;
+  font-weight: 500;
   font-size: 16px;
   line-height: 1.9;
   letter-spacing: 0.06em;
